// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Todo  1`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-0",
      "todoEdge": Object {
        "cursor": "Nzg=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzo3OA==",
          "text": "Get A Customer 1",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Add Todo  2`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-1",
      "todoEdge": Object {
        "cursor": "Nzk=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzo3OQ==",
          "text": "Get A Customer 2",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 2,
      },
    },
  },
}
`;

exports[`Add Todo  3`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-2",
      "todoEdge": Object {
        "cursor": "ODA=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzo4MA==",
          "text": "Get A Customer 3",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Add Todo  4`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-0",
      "todoEdge": Object {
        "cursor": "ODE=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzo4MQ==",
          "text": "Get A Customer 1",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Add Todo  5`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-1",
      "todoEdge": Object {
        "cursor": "ODI=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzo4Mg==",
          "text": "Get A Customer 2",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 2,
      },
    },
  },
}
`;

exports[`Add Todo  6`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-2",
      "todoEdge": Object {
        "cursor": "ODM=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzo4Mw==",
          "text": "Get A Customer 3",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Add User  1`] = `
Object {
  "data": Object {
    "addUser": Object {
      "clientMutationId": "user1",
      "id": "VXNlcjozNA==",
    },
  },
}
`;

exports[`Change Todo Status => false  1`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-0",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzo3OA==",
        "text": "Get A Customer 1",
      },
      "user": Object {
        "completedCount": 2,
        "email": "user1@test.com",
        "id": "VXNlcjozNA==",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Change Todo Status => false  2`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-1",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzo3OQ==",
        "text": "Get A Customer 2",
      },
      "user": Object {
        "completedCount": 1,
        "email": "user1@test.com",
        "id": "VXNlcjozNA==",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Change Todo Status => false  3`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-2",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzo4MA==",
        "text": "Get A Customer 3",
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "id": "VXNlcjozNA==",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Change Todo Status => true  1`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-0",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzo3OA==",
        "text": "Get A Customer 1",
      },
      "user": Object {
        "completedCount": 1,
        "email": "user1@test.com",
        "id": "VXNlcjozNA==",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Change Todo Status => true  2`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-1",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzo3OQ==",
        "text": "Get A Customer 2",
      },
      "user": Object {
        "completedCount": 2,
        "email": "user1@test.com",
        "id": "VXNlcjozNA==",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Change Todo Status => true  3`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-2",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzo4MA==",
        "text": "Get A Customer 3",
      },
      "user": Object {
        "completedCount": 3,
        "email": "user1@test.com",
        "id": "VXNlcjozNA==",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Clear Completed Todos  1`] = `
Object {
  "data": Object {
    "clearCompletedTodos": Object {
      "clientMutationId": "ClearCompletedTodos",
      "deletedTodoIds": Array [
        "VG9kbzo3OA==",
        "VG9kbzo3OQ==",
        "VG9kbzo4MA==",
      ],
      "user": Object {
        "completedCount": 0,
        "id": "VXNlcjozNA==",
        "totalCount": 0,
      },
    },
  },
}
`;

exports[`Mark All Todos  1`] = `
Object {
  "data": Object {
    "markAllTodos": Object {
      "changedTodos": Array [
        Object {
          "complete": true,
          "id": "VG9kbzo3OA==",
          "text": "Get A Customer 1",
        },
        Object {
          "complete": true,
          "id": "VG9kbzo3OQ==",
          "text": "Get A Customer 2",
        },
        Object {
          "complete": true,
          "id": "VG9kbzo4MA==",
          "text": "Get A Customer 3",
        },
      ],
      "clientMutationId": "MarkAllTodos",
      "user": Object {
        "completedCount": 3,
        "id": "VXNlcjozNA==",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Query User  1`] = `
Object {
  "data": Object {
    "user": Object {
      "completedCount": 0,
      "email": "user1@test.com",
      "id": "VXNlcjozNA==",
      "todos": Object {
        "edges": Array [
          Object {
            "cursor": "Nzg=",
            "node": Object {
              "__typename": "Todo",
              "complete": false,
              "id": "VG9kbzo3OA==",
            },
          },
          Object {
            "cursor": "Nzk=",
            "node": Object {
              "__typename": "Todo",
              "complete": false,
              "id": "VG9kbzo3OQ==",
            },
          },
          Object {
            "cursor": "ODA=",
            "node": Object {
              "__typename": "Todo",
              "complete": false,
              "id": "VG9kbzo4MA==",
            },
          },
        ],
        "pageInfo": Object {
          "endCursor": "ODA=",
          "hasNextPage": true,
        },
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Remove User  1`] = `
Object {
  "data": Object {
    "removeUser": Object {
      "clientMutationId": "user1",
    },
  },
}
`;

exports[`RemoveTodo  1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 18,
          "line": 3,
        },
      ],
      "message": "Field RemoveTodoInput.userId of required type ID! was not provided.",
    },
  ],
}
`;

exports[`RemoveTodo  2`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 18,
          "line": 3,
        },
      ],
      "message": "Field RemoveTodoInput.userId of required type ID! was not provided.",
    },
  ],
}
`;

exports[`RemoveTodo  3`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 18,
          "line": 3,
        },
      ],
      "message": "Field RemoveTodoInput.userId of required type ID! was not provided.",
    },
  ],
}
`;

exports[`RenameTodo  1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "message": "must be defined",
      "path": Array [
        "variable",
        "id",
      ],
    },
  ],
}
`;

exports[`RenameTodo  2`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "message": "must be defined",
      "path": Array [
        "variable",
        "id",
      ],
    },
  ],
}
`;

exports[`RenameTodo  3`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "message": "must be defined",
      "path": Array [
        "variable",
        "id",
      ],
    },
  ],
}
`;
